force-app/main/default/objects/Asset/fields/ARTL_Effective_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Effective_Change_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Change Date</label>
    <type>Date</type>
</CustomField>