force-app/main/default/objects/Asset/fields/ARTL_Feasibility__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Feasibility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FeasibilityId</label>
    <referenceTo>ARTL_Feasibility__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>