force-app/main/default/objects/Asset/fields/ARTL_IsDemo__c.field-meta.xml
<CustomField>
    <fullName>ARTL_IsDemo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo</label>
    <type>Checkbox</type>
</CustomField>