force-app/main/default/objects/Asset/fields/ARTL_LSI_FText__c.field-meta.xml
<CustomField>
    <fullName>ARTL_LSI_FText__c</fullName>
    <formula>TEXT( ARTL_LSI__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LSI</label>
    <type>Text</type>
</CustomField>