force-app/main/default/objects/Asset/fields/ARTL_Media__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Media__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Media</label>
    <length>50</length>
    <type>Text</type>
</CustomField>