force-app/main/default/objects/Asset/fields/ARTL_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Order_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>