force-app/main/default/objects/Asset/fields/ARTL_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Shifting</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>L1-L3 Construct Change</fullName>
            </value>
            <value>
                <fullName>Rate Revision</fullName>
            </value>
            <value>
                <fullName>Rebilling</fullName>
            </value>
            <value>
                <fullName>LSI Transfer</fullName>
            </value>
            <value>
                <fullName>Disconnect</fullName>
            </value>
            <value>
                <fullName>Network Change</fullName>
            </value>
            <value>
                <fullName>Hardware Replacement</fullName>
            </value>
            <value>
                <fullName>Suspend</fullName>
            </value>
            <value>
                <fullName>Resume</fullName>
            </value>
            <value>
                <fullName>PO Renewal</fullName>
            </value>
            <value>
                <fullName>Permanent Disconnect</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>