force-app/main/default/objects/Asset/fields/ARTL_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>ARTL_Purchase_Order__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>